--- a/week-3/stylesheets/my-berkshire-stylesheet.css
+++ b/week-3/stylesheets/my-berkshire-stylesheet.css
@@ -17,7 +17,6 @@ body {
 .medium {
   font-weight: bold;
   font-size: 17.5px;
-
 }
 
 .ohp {
@@ -30,7 +29,6 @@ p {
   text-align: center;
 }
 
-
 .address {
   font-size: 15px;
   font-weight: bold;
@@ -40,15 +38,9 @@ p {
   font-size: 10px;
 }
 
-
 table {
   width: 85%;
 }
-
-.line {
-  border-bottom: 15px;
-}
-
 
 .geico {
   text-align: center;
@@ -68,30 +60,26 @@ table {
   text-align: left;
   font-size: 10px;
 }
+
 .bold {
   text-align: left;
   font-size: 10px;
   font-weight: bold;
 }
 
-
-
 .divider {
 width: 100%;
-border-top-width: 1px;
-border-top-style: solid;
-border-top-color: black;
+border-width: 1px;
+border-style: solid;
+border-color: black;
 
 }
 
 a {
+
   color: #800080;
 }
 
-a: visited {
+a:visited {
   color: #ff0000;
   }
-  
-body ul li {
-   font-size: 15px
- }
