--- a/week-3/chrome-devtools/css-positioning.css
+++ b/week-3/chrome-devtools/css-positioning.css
@@ -1,42 +1,40 @@
-/*Note: There are three different ways to add background colors here.
-You can add them using a name (for common names), Hex, or RGB values.
-*/
-
 body {
   background-color: gray;
 }
 
 #div-1 {
+  position: fixed;
   border: 1px solid black;
   background-color: purple;
-  position: absolute;
-  left: 0px;
-  width: 100%;
-  height: 2em;
-  bottom: 0;
-}
-}
-#div-2 {
-  background-color: #09CDA1;
-  position: relative;
-  top: 0;
-  width: 50%;
+  width: 5em;
   height: 5em;
- margin:0 auto;
+  margin-left: 10em;
+  top: 10em;
 }
-#div-3 {
-  background-color: #69D2E7;
-  position: absolute;
-  top: 240px;
-  left: 30px;
-  width: 100px;
-  height: 100px;
-}
-#div-4 {
-  background-color: rgb(205,163,205);
-  width: 300px;
+
+#div-2 {
   position: fixed;
-  top: 100px;
-  left: 200px;
-  height: 100px;
+  background-color: #09CDA1;
+  width: 5em;
+  height: 5em;
+  margin-left: 10em;
+  top: 0;
+}
+
+
+#div-3 {
+  margin-top: 5em;
+  background-color: #69D2E7;
+  margin-left: 5em;
+  width: 5em;
+  height: 5em;
+}
+
+#div-4 {
+
+  background-color: rgb(205,163,205);
+  width: 5em;
+  height: 5em;
+  margin-left: 15em;
+  margin-top: -5em;
 }
