Modify and add reflection on gps2-1.html and gps2-1.css.

--- a/week-4/gps/gps2-1.css
+++ b/week-4/gps/gps2-1.css
@@ -1,1 +1,38 @@
 /**/
+* {
+	font-family: -apple-system, "San Francisco", "Helvetica Neue", Arial, sans-serif;
+}
+
+a:link {
+    text-decoration: none;
+}
+
+a:visited {
+    color: red;
+}
+
+a:hover {
+    color: gray;
+}
+
+a:active {
+    color: purple;
+}
+
+h1 {
+	color: gray;
+}
+
+.column {
+	width: 45%;
+ 	display: inline-block;
+ 	vertical-align: top;
+}
+
+.column-1 {
+  	margin-left: 5%;
+}
+ 
+footer {
+	margin-top: 20px;
+}
